<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/brand_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_wide"
                android:text="@string/shoe_brand"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brand_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/brand_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/size_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_wide"
                android:text="@string/size"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/size_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/size_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_wide"
                android:text="@string/description"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/save_button" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#F44336"
                    android:text="@string/cancel_button" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>